@@ -25,8 +25,8 @@ echo "${OCAMLN}run$EXE ../meta/${CAMLP5N}r$EXE -nolib -I ../meta pa_macro.cmo pa
 ${OCAMLN}run$EXE ../meta/${CAMLP5N}r$EXE -nolib -I ../meta pa_macro.cmo pa_extend.cmo q_MLast.cmo -meta_action tmp.ml -o tmp.ppo
 echo "${OCAMLN}c -I ../lib -I ../main -c -impl tmp.ppo" 1>&2
 ${OCAMLN}c -I ../lib -I ../main -c -impl tmp.ppo
-echo "/bin/rm tmp.ppo" 1>&2
-/bin/rm tmp.ppo
+echo "${RM} tmp.ppo" 1>&2
+${RM} tmp.ppo
 echo "${OCAMLN}run$EXE ../main/${CAMLP5N}$EXE ./compile.cmo ./tmp.cmo ../etc/pr_r.cmo ../etc/pr_rp.cmo $ARGS -sep "\n\n" -impl - < /dev/null" 1>&2
 ${OCAMLN}run$EXE ../main/${CAMLP5N}$EXE ./compile.cmo ./tmp.cmo ../etc/pr_r.cmo ../etc/pr_rp.cmo $ARGS -sep "\n\n" -impl - < /dev/null
-/bin/rm tmp.*
+${RM} tmp.*
